<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/settings_menu_item" android:titleCondensed="@string/settings_name" android:title="@string/settings_name">
        <menu><item android:id="@+id/scaling_menu_item" android:title="@string/scaling_menu_item_name" android:enabled="true" android:visible="true" android:checked="true" android:checkable="true" android:titleCondensed="@string/scaling_menu_item_name"></item>
        <group android:id="@+id/fps_menu_group">
            <item android:id="@+id/fps_30_menu_item" android:checkable="true" android:title="@string/fps_30_menu_item_name"/>
            <item android:id="@+id/fps_60_menu_item" android:checkable="true" android:title="@string/fps_60_menu_item_name"/>
            <item android:id="@+id/fps_90_menu_item" android:checkable="true" android:title="@string/fps_90_menu_item_name"/>
            <item android:id="@+id/fps_unlimited_menu_item" android:checkable="true" android:title="@string/fps_unlimited_menu_item_name"/>
        </group>
</menu>
    </item>
    <item android:id="@+id/dev_menu_item" android:titleCondensed="@string/dev_name" android:title="@string/development_name" android:enabled="false" android:visible="false">
        <menu>
            <item android:id="@+id/record_gesture_menu_item" android:title="@string/record_gesture_menu_item_name"/>
            <item android:id="@+id/save_gestures_menu_item" android:title="@string/save_gestures_menu_item_name"/>
            <item android:id="@+id/load_gestures_menu_item" android:title="@string/load_gestures_menu_item_name"/>
        </menu>
    </item>
</menu>